--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.P1faker" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/blue</item>
+    </style>
 
-    <style name="Theme.P1faker" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.P1faker" parent="Base.Theme.P1faker" />
 </resources>
